adjust nav icon and hamburger menu

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -33,16 +33,18 @@ body {
 }
 
 .nav {
-    height: 100px;
-    position: relative;
     width: 100%;
+    padding: 40px 0;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &__container {
-        padding: 34px 27px;
-        width: 100%;
+        width: 311px;
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: center; 
         background-color: red;
     }
 
@@ -59,15 +61,17 @@ body {
     &__measure {
         position: absolute;
         top: 0;
-        right: 10px;
+        right: 100px;
         background-color: red;
-        height: 125px;
+        height: 145px;
         width: 6px;
         z-index: 10;
     }
 }
 
 .header {
+
+    padding-top: 30px;
 
     &__image-container {
         position: relative;
