--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,14 +11,22 @@ body {
 }
 
 .nav {
-  height: 100px;
-  position: relative;
   width: 100%;
+  padding: 40px 0;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .nav__container {
-  padding: 34px 27px;
-  width: 100%;
+  width: 311px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -44,11 +52,15 @@ body {
 .nav__measure {
   position: absolute;
   top: 0;
-  right: 10px;
+  right: 100px;
   background-color: red;
-  height: 125px;
+  height: 145px;
   width: 6px;
   z-index: 10;
+}
+
+.header {
+  padding-top: 30px;
 }
 
 .header__image-container {
