--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,21 +60,21 @@ body {
 }
 
 .header {
-  padding-top: 30px;
+  padding-top: 12px;
 }
 
 .header__image-container {
   position: relative;
-  height: 250px;
+  height: 260px;
   width: 100%;
   background-color: aquamarine;
 }
 
 .header__image {
   position: absolute;
-  width: 306px;
-  bottom: 10px;
-  right: 10px;
+  width: 334px;
+  bottom: 0px;
+  right: 12px;
   z-index: 2;
 }
 
@@ -89,13 +89,24 @@ body {
   border-bottom-left-radius: 85px;
 }
 
-.header__measure {
+.header__measure-right {
   position: absolute;
-  width: 28px;
+  width: 31px;
+  z-index: 100;
   height: 42px;
-  bottom: 0;
+  bottom: 100px;
   right: 0;
   background-color: red;
+}
+
+.header__measure-left {
+  position: absolute;
+  width: 33px;
+  z-index: 100;
+  height: 42px;
+  bottom: 100px;
+  right: left;
+  background-color: palevioletred;
 }
 
 .header__text-container {
