--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -70,12 +70,11 @@ body {
 }
 
 .header {
-
-    padding-top: 30px;
+    padding-top: 12px;
 
     &__image-container {
         position: relative;
-        height: 250px;
+        height: 260px;
         width: 100%;
         background-color: aquamarine;
 
@@ -83,9 +82,9 @@ body {
 
     &__image {
         position: absolute;
-        width: 306px;
-        bottom: 10px;
-        right: 10px;
+        width: 334px;
+        bottom: 0px;
+        right: 12px;
         z-index: 2;
     }
 
@@ -100,14 +99,24 @@ body {
         border-bottom-left-radius: 85px;
     }
 
-    &__measure {
+    &__measure-right {
         position: absolute;
-        width: 28px;
+        width: 31px;
+        z-index: 100;
         height: 42px;
-        bottom: 0;
+        bottom: 100px;
         right: 0;
         background-color: red;
+    }
 
+    &__measure-left {
+        position: absolute;
+        width: 33px;
+        z-index: 100;
+        height: 42px;
+        bottom: 100px;
+        right: left;
+        background-color: palevioletred;
     }
 
     &__text-container {
