--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,7 @@ body {
   background-color: red;
   height: 145px;
   width: 6px;
-  z-index: 10;
+  z-index: 400;
 }
 
 .header {
@@ -65,28 +65,30 @@ body {
 
 .header__image-container {
   position: relative;
-  height: 260px;
+  height: 281px;
   width: 100%;
   background-color: aquamarine;
+  overflow: hidden;
 }
 
 .header__image {
   position: absolute;
   width: 334px;
-  bottom: 0px;
+  height: 247px;
+  bottom: 12px;
   right: 12px;
-  z-index: 2;
+  z-index: 20;
 }
 
-.header__bg-graphic {
+.header__oval-graphic {
   position: absolute;
-  width: 262px;
-  height: 175px;
+  width: 577px;
+  height: 203px;
   bottom: 0;
-  right: 0;
-  z-index: 0;
+  left: 71px;
+  z-index: 10;
   background-color: #5368df;
-  border-bottom-left-radius: 85px;
+  border-radius: 316px;
 }
 
 .header__measure-right {
@@ -99,14 +101,35 @@ body {
   background-color: red;
 }
 
+.header__measure-image {
+  position: absolute;
+  opacity: 0.5;
+  z-index: 300;
+  height: 206px;
+  bottom: 48px;
+  right: 31px;
+  left: 33px;
+  background-color: darkcyan;
+}
+
 .header__measure-left {
   position: absolute;
   width: 33px;
   z-index: 100;
   height: 42px;
   bottom: 100px;
-  right: left;
+  left: 0;
   background-color: palevioletred;
+}
+
+.header__measure-bottom {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  z-index: 100;
+  bottom: 0;
+  right: 100px;
+  background-color: yellow;
 }
 
 .header__text-container {
