--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,7 +128,7 @@ body {
   background-color: yellow;
 }
 
-.header__text-container {
+.header__text-and-buttons-container {
   margin-top: 48px;
 }
 
@@ -152,7 +152,7 @@ body {
   padding: 0 42px;
 }
 
-.header__button-container {
+.header__buttons-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -162,20 +162,26 @@ body {
 }
 
 .header__button {
-  width: 132px;
-  height: 42px;
-  margin: 34px 6px;
+  height: 48px;
+  margin: 32px 7px;
   border: none;
-  border-radius: 8px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0.25px;
+  -webkit-box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
+          box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
 }
 
 .header__button--primary {
+  width: 151px;
   background-color: #5368df;
   color: white;
 }
 
 .header__button--secondary {
-  color: black;
+  width: 146px;
+  color: #252b46;
   background-color: #f7f7f7;
 }
 
