--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,6 +1,7 @@
 @import '../utilities/variables';
 
 .button {
+    font-family: 'Rubik', sans-serif;
     height: 48px;
     font-size: $font-size-button;
     font-weight: $font-weight-medium;
@@ -19,5 +20,9 @@
         width: 146px;
         color: $very-dark-blue;
         background-color: $very-light;
+    }
+
+    &--margin {
+        margin: 0 7px;
     }
 }
