--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,139 +2,10 @@
 @import 'utilities/variables';
 @import 'base/typography';
 @import 'components/buttons';
+@import 'layout/navigation';
+@import 'layout/header';
 // Mobile: 375px
 // Desktop: 1440px
-
-
-$font-size-primary: 18px;
-$font-size-secondary: 13px;
-$font-size-mobile-primary: 30px;
-$font-size-mobile-secondary: 15px;
-
-$font-weight-regular: 400;
-$font-weight-medium: 500;
-
-$font-color-primary: $very-dark-blue;
-$font-color-secondary: $grayish-blue;
-$color-primary: $soft-blue;
-$color-secondary: $soft-red;
-
-$button-font-size: 14px;
-$button-color-light: hsl(0,0,97%);
-
-.nav {
-    width: 100%;
-    padding: 40px 0;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    &__container {
-        width: 311px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center; 
-    }
-
-    &__logo {
-        width: 147px;
-        height: 25px;
-    }
-
-    &__menu-icon {
-        width: 18px;
-        height: 15px;
-    }
-}
-
-.header {
-    padding-top: 12px;
-
-    &__image-container {
-        position: relative;
-        height: 281px;
-        width: 100%;
-        overflow: hidden;
-
-    }
-
-    &__image {
-        position: absolute;
-        width: 334px;
-        height: 247px;
-        bottom: 12px;
-        right: 12px;
-        z-index: 20;
-    }
-
-    &__oval-graphic {
-        position: absolute;
-        width: 577px;
-        height: 203px;
-        bottom: 0;
-        left: 71px;
-        z-index: 10;
-        background-color: $color-primary;
-        border-radius: 316px;
-    }
-
-    &__text-and-buttons-container {
-        margin-top: 48px;
-    }
-
-    &__title {
-        font-size: $headline;
-        color: $font-color-primary;
-        font-weight: $font-weight-medium;
-        line-height: 40px;
-        letter-spacing: -0.09px;
-        text-align: center;
-        padding: 0 20px;
-    }
-    
-    &__desc {
-        margin-top: 16px;
-        font-size: $font-size-mobile-secondary;
-        color: $font-color-secondary;
-        font-weight: $font-weight-regular;
-        line-height: 25px;
-        text-align: center;
-        padding: 0 42px;
-    }
-
-    &__buttons-wrapper {
-        display: flex;
-        justify-content: center;
-        padding-top: 32px;
-
-        .button {
-            margin: 0 7px;
-        }
-    }
-
-    // &__button {
-    //     height: 48px;
-    //     margin: 0 7px;
-    //     border: none;
-    //     border-radius: 5px;
-    //     font-size: $button-font-size;
-    //     font-weight: $font-weight-medium;
-    //     letter-spacing: 0.25px;
-    //     box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
-        
-    //     &--primary {
-    //         width: 151px;
-    //         background-color: $color-primary;
-    //         color: white;
-    //     }
-    //     &--secondary {
-    //         width: 146px;
-    //         color: $very-dark-blue;
-    //         background-color: $button-color-light;
-    //     }
-    // }
-}
 
 .attribution {
     font-size: 11px; text-align: center;
