--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 *, *::after,
 *::before {
-  padding: 0;
   margin: 0;
+  padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -9,6 +9,11 @@
 body {
   font-size: 15px;
   font-family: 'Rubik', sans-serif;
+}
+
+button {
+  background-color: white;
+  border: none;
 }
 
 .button {
@@ -140,6 +145,54 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding-top: 32px;
+}
+
+.features__header {
+  margin: 140px 32px 40px 32px;
+  text-align: center;
+}
+
+.features__title {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 52px;
+  letter-spacing: -0.075px;
+}
+
+.features__description {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 25px;
+  color: #9194a1;
+}
+
+.features__buttons-container {
+  width: 100%;
+  padding: 0 32px;
+}
+
+.features__button {
+  position: relative;
+  width: 100%;
+  height: 58px;
+  font-size: 16px;
+  line-height: 17px;
+  color: #252b46;
+  letter-spacing: 0.533333px;
+  outline: none;
+  cursor: pointer;
+}
+
+.features__button-underscore {
+  position: absolute;
+  background-color: #fa5757;
+  z-index: 50;
+  width: 143px;
+  height: 4px;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .attribution {
