--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,3 +4,8 @@ body {
     font-size: $body;
     font-family: 'Rubik', sans-serif;
 }
+
+button {
+    background-color: white;
+    border: none;
+}
